menyempurnakan kerangka html

--- a/index.html
+++ b/index.html
@@ -4,8 +4,36 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cari Lapak</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Kikir menyan</h1>
+    <header>
+    <h1>Cari Lapak</h1>
+    <p>Menyediakan kebutuhan digitalmu</p>
+    <nav>
+        <ul>
+            <li><a href="login.html">Login</a></li>
+        </ul>
+        <ul>
+            <li><a href="registration.html">Daftar</a></li>
+        </ul>
+    </nav>
+    </header>
+<section>
+    <div>
+
+    </div>
+</section>
+<section>
+    <div>
+
+    </div>
+</section>
+<section>
+    <div>
+
+    </div>
+</section>
+<footer></footer>
 </body>
 </html>
