--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header class="header">
         <nav class="nav-container">
             <div class="logo">
-                <a href="#"><img src="logo.png" alt="Logo"></a>
+                <a href="#"><img src="icon/risk.png" alt="Logo"></a>
             </div>
             
             <div class="nav-links">
@@ -24,7 +24,7 @@
             
             <div class="auth-buttons">
                 <a href="login.html" class="btn-login">Masuk</a>
-                <a href="#registration.html" class="btn-register">Daftar</a>
+                <a href="registration.html" class="btn-register">Daftar</a>
             </div>
         </nav>
     </header>
@@ -34,10 +34,6 @@
         <div class="hero-content">
             <h1>Belanja kebutuhan digitalmu disini.</h1>
             <p>Beli listrik harga murah disini</p>
-            <div class="search-bar">
-                <input type="text" placeholder="Masukkan nomor meteran listrik">
-                <button>Cari</button>
-            </div>
         </div>
     </section>
 
@@ -70,6 +66,106 @@
         <div class="product-grid">
             <!-- Product Item 1 -->
             <div class="product-card">
+                <img src="product1.jpg" alt="Product 1">
+                <div class="product-info">
+                    <h3>Lorem ipsum dolor sit amet,</h3>
+                    <div class="price">Rp 10.000</div>
+                    <button>Beli Sekarang</button>
+                </div>
+            </div>
+            <!-- Product Item 2 -->
+            <div class="product-card">
+            <img src="product1.jpg" alt="Product 1">
+            <div class="product-info">
+                <h3>Lorem ipsum dolor sit amet,</h3>
+                <div class="price">Rp 10.000</div>
+                <button>Beli Sekarang</button>
+            </div>
+        </div>
+        <!--Product Item 3-->
+        <div class="product-card">
+                <img src="product1.jpg" alt="Product 1">
+                <div class="product-info">
+                    <h3>Lorem ipsum dolor sit amet,</h3>
+                    <div class="price">Rp 10.000</div>
+                    <button>Beli Sekarang</button>
+                </div>
+            </div>
+
+
+            <div class="product-card">
+                <img src="product1.jpg" alt="Product 1">
+                <div class="product-info">
+                    <h3>Lorem ipsum dolor sit amet,</h3>
+                    <div class="price">Rp 10.000</div>
+                    <button>Beli Sekarang</button>
+                </div>
+            </div>
+            <!-- Product Item 2 -->
+            <div class="product-card">
+            <img src="product1.jpg" alt="Product 1">
+            <div class="product-info">
+                <h3>Lorem ipsum dolor sit amet,</h3>
+                <div class="price">Rp 10.000</div>
+                <button>Beli Sekarang</button>
+            </div>
+        </div>
+        <!--Product Item 3-->
+        <div class="product-card">
+                <img src="product1.jpg" alt="Product 1">
+                <div class="product-info">
+                    <h3>Lorem ipsum dolor sit amet,</h3>
+                    <div class="price">Rp 10.000</div>
+                    <button>Beli Sekarang</button>
+                </div>
+            </div>
+            <div class="product-card">
+                <img src="product1.jpg" alt="Product 1">
+                <div class="product-info">
+                    <h3>Lorem ipsum dolor sit amet,</h3>
+                    <div class="price">Rp 10.000</div>
+                    <button>Beli Sekarang</button>
+                </div>
+            </div>
+            <!-- Product Item 2 -->
+            <div class="product-card">
+            <img src="product1.jpg" alt="Product 1">
+            <div class="product-info">
+                <h3>Lorem ipsum dolor sit amet,</h3>
+                <div class="price">Rp 10.000</div>
+                <button>Beli Sekarang</button>
+            </div>
+        </div>
+        <!--Product Item 3-->
+        <div class="product-card">
+                <img src="product1.jpg" alt="Product 1">
+                <div class="product-info">
+                    <h3>Lorem ipsum dolor sit amet,</h3>
+                    <div class="price">Rp 10.000</div>
+                    <button>Beli Sekarang</button>
+                </div>
+            </div>
+
+
+            <div class="product-card">
+                <img src="product1.jpg" alt="Product 1">
+                <div class="product-info">
+                    <h3>Lorem ipsum dolor sit amet,</h3>
+                    <div class="price">Rp 10.000</div>
+                    <button>Beli Sekarang</button>
+                </div>
+            </div>
+            <!-- Product Item 2 -->
+            <div class="product-card">
+            <img src="product1.jpg" alt="Product 1">
+            <div class="product-info">
+                <h3>Lorem ipsum dolor sit amet,</h3>
+                <div class="price">Rp 10.000</div>
+                <button>Beli Sekarang</button>
+            </div>
+        </div>
+        <!--Product Item 3-->
+        <div class="product-card">
                 <img src="product1.jpg" alt="Product 1">
                 <div class="product-info">
                     <h3>Lorem ipsum dolor sit amet,</h3>
