menambahkan fitur baru

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Cari Lapak - Marketplace terpercaya untuk pembelian voucher game, pulsa, dan layanan digital lainnya. Harga terbaik, proses instan!">
     <title>Cari Lapak</title>
     <link rel="stylesheet" type="text/css" href="style.css">
     <link href="https://cdn.jsdelivr.net/npm/remixicon@4.5.0/fonts/remixicon.css" rel="stylesheet">
@@ -23,16 +24,21 @@
         <div class="main">
             <a href="#" class="user"><i class="ri-user-fill"></i>Masuk</a>
             <a href="#">Daftar</a>
-            <div class="bx bx-menu" id="menu-icon"></div>
-            
+            <div class="bx bx-menu" id="menu-icon"></div>          
         </div>
     </header>
     <section class="hero">
         <div class="hero-content">
             <h1>Temukan Item Game Terbaikmu</h1>
             <p>Beli voucher, akun game, dan item digital lainnya dengan harga terbaik</p>
-            </div>
         </div>
+        <section class="featured-games">
+            <div class="game-banner" style="background-image: url('img/mlbb-banner.jpg')">
+                <div class="banner-content">
+                    <h3>Mobile Legends</h3>
+                    <p>Diskon 20% Diamond Hari Ini!</p>
+                </div>
+            </div>
     </section>
 
     <!-- Categories Section -->
